server-test.log

> tripadvisor-backend@1.0.0 start
> node src/server.js

◇ injected env (10) from .env // tip: ⌘ enable debugging { debug: true }
Ignoring invalid configuration option passed to Connection: collation. This is currently a warning, but in future versions of MySQL2, an error will be thrown if you pass an invalid configuration option to a Connection
◇ injected env (0) from .env // tip: ⌘ override existing { override: true }
E:\ppppp\backend\api\hotels.js:198
        };
        ^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (E:\ppppp\backend\api\routes.js:7:19)

Node.js v22.16.0
